--- a/index.html
+++ b/index.html
@@ -7,14 +7,31 @@ color:yellow;
    }
 h1{color:white;}
 h2{color:blue;}
-table{color:white;}
+table{color:white;
+border:1px solid blue;
+}
+div{
+   display:table;
+   width:70%;
+   height:100px;
+   background-color:#7f9482;
+   margin bottom:20px;
+   border: 2px solid #ADD8E6;
+   }
+span{
+    display:table-cell;
+    vertical-align: middle;
+	}	
+
+
 
 </style>
 <title>Aadit's first webpage</title>
 </head>
-<body bgcolor= "#000000" text="orange">
+<body bgcolor= "#111111" text="orange">
 <center>
 <h1>5 Best Cricketers of all Time</h1>
+<div id="div"><span>
 <h2>1.Sir Donald Bradman-Australia </h2>
 <p>
 Sir Donald George Bradman, AC (27 August 1908 to 25 February 2001), nicknamed "The Don", was an Australian international cricketer, widely acknowledged as the greatest batsman of all time.Bradman's career Test batting average of 99.94 has been cited as the greatest achievement by any sportsman in any major sport
@@ -51,7 +68,9 @@ Sir Donald George Bradman, AC (27 August 1908 to 25 February 2001), nicknamed "T
 		
 	</tr>
 </table>
-
+</span>
+</div>
+<div id="div"><span>
 <h2>2.Sachin Tendulkar-India</h2>
 <p>
 Sachin Ramesh Tendulkar ( born 24 April 1973) is an Indian former international cricketer and a former captain of the Indian national team. He is widely regarded as one of the greatest batsmen in the history of cricket.He is the highest run scorer of all time in International cricket.
@@ -87,6 +106,9 @@ Sachin Ramesh Tendulkar ( born 24 April 1973) is an Indian former international 
 	
 	</tr>
 </table>
+</span>
+</div>
+<div id="div"><span>
 <h2>3.Virat Kohli-India</h2>
 <p>
 Virat Kohli (born 5 November 1988) is an Indian cricketer who currently captains the India national team. A right-handed top-order batsman, Kohli is regarded as one of the best batsmen in the world.He plays for Royal Challengers Bangalore in the Indian Premier League (IPL), and has been the team's captain since 2013. Since October 2017, he has been the top-ranked ODI batsman in the world and is currently 2nd in Test rankings with 886 points.Among Indian batsmen, Kohli has the best ever Test rating (937 points), ODI rating (911 points) and T20I rating (897 points).
@@ -133,6 +155,9 @@ Virat Kohli (born 5 November 1988) is an Indian cricketer who currently captains
 	
 	</tr>
 </table>
+</span>
+</div>
+<div id="div"><span>
 <h2>4.Sir Viv Richards-West Indies</h2>
 <p>Sir Isaac Vivian Alexander Richards, KNH, OBE (born 7 March 1952) is an Antiguan retired cricketer, who represented the West Indies at Test and international levels. He is regarded as one of the greatest batsmen of all time.In December 2002, he was chosen by Wisden as the greatest ODI batsman of all time, as well as the third greatest Test batsman of all time, after Sir Don Bradman and Sachin Tendulkar. Richards was voted one of the five Cricketers of the Century by a 100-member panel of experts in 2000, along with Sir Donald Bradman, Sir Garfield Sobers, Sir Jack Hobbs and Shane Warne. He is also the mentor of T20 team Quetta Gladiators in Pakistan Super League.
 
@@ -171,6 +196,9 @@ Virat Kohli (born 5 November 1988) is an Indian cricketer who currently captains
 	</tr>
 	
 </table>
+</span>
+</div>
+<div id="div"><span>
 <h2>5.Kumar Sangakkara-Sri Lanka</h2>
 <p>
 Kumar Chokshanada Sangakkara (born 27 October 1977) is a former cricketer and captain of the Sri Lankan national team. He is regarded as one of the greatest batsmen of all time.Sangakkara scored 28,016 runs in international cricket across all formats in a career that spanned 15 years. At retirement, he was the second-highest run-scorer in ODI cricket and sixth-highest run scorer in Test cricket.
@@ -218,7 +246,10 @@ Kumar Chokshanada Sangakkara (born 27 October 1977) is a former cricketer and ca
 		<td>78</td>
 	
 	</tr>
-</table></center>
+</table>
+</span>
+</div>
+</center>
 
 
 </body>
