--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ div{
    display:table;
    width:70%;
    height:100px;
-   background-color:#7f9482;
+	border-radius:.5em;
+   background-color:#7f5af0;
    margin bottom:20px;
    border: 2px solid #ADD8E6;
    }
