--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ span{
 
 
 </style>
-<title>Aadit's first webpage</title>
+<title>Top Cricketers</title>
 </head>
 <body bgcolor= "#111111" text="orange">
 <center>
